// Copyright 2022 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.delegate;
option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

message RegistryAuth {
  string address = 1;
  string username = 2;
  string password = 3;
}

message ImagePull {
  string image = 1;
  RegistryAuth auth = 2;
}

message Secret {
  string secret_id = 1;
  string secret_name = 2;
}